@startuml
left to right direction
skinparam classAttributeIconSize 0
skinparam defaultFontName Arial
skinparam packageStyle rectangle

package "mka.coffeshopmanagementsystem" {

    package "model" {
        package "persistence" {
            class JsonFileManager {
                + saveToFile(filePath: String, data: Object): void
                + loadFromFile(filePath: String, typeClass: Class): Object
                + loadFromFile(filePath: String, type: Type): Object
            }
            class GsonProvider {
                + {static} createGson(): Gson
            }
            
            package "repository" {
                interface IRepository<T> {
                    + findAll(): List<T>
                    + saveAll(entities: List<T>): void
                    + add(entity: T): void
                }
                class JsonRepository<T> {
                    + findAll(): List<T>
                    + saveAll(entities: List<T>): void
                    + add(entity: T): void
                }
                interface ISingleRepository<T> {
                    + load(): T
                    + save(entity: T): void
                }
                class JsonSingleRepository<T> {
                    + load(): T
                    + save(entity: T): void
                }
                
                IRepository <|.. JsonRepository
                ISingleRepository <|.. JsonSingleRepository
                JsonRepository ..> JsonFileManager : uses
                JsonSingleRepository ..> JsonFileManager : uses
            }
        }

        package "utils" {
            class I18n {
                - bundle: ResourceBundle
                + setLocale(locale: Locale): void
                + getString(key: String): String
            }
            
            class UnitConverter {
                + {static} normalize(unit: String, quantity: BigDecimal): ConversionResult
            }
            
            class ConversionResult {
                + unit: String
                + quantity: BigDecimal
            }
            
            UnitConverter +-- ConversionResult
        }

        package "people" {
            abstract class Person {
                - id: String
                - name: String
                + Person()
                + Person(id: String, name: String)
                + getId(): String
                + getName(): String
            }

            class Customer {
                - email: String
                - loyaltyPoints: int
                + Customer()
                + Customer(id: String, name: String, email: String)
                + getEmail(): String
            }

            abstract class Employee {
                - role: String
                - shift: String
                + Employee()
                + Employee(id: String, name: String, role: String)
                + getRole(): String
                + getShift(): String
                + {abstract} performOperation(): String
            }

            class Cashier {
                + Cashier()
                + Cashier(id: String, name: String)
                + takeOrder(customer: Customer): Order
                + performOperation(): String
            }

            class Chef {
                + Chef()
                + Chef(id: String, name: String)
                + performOperation(): String
            }

            class Barista {
                + Barista()
                + Barista(id: String, name: String)
                + prepareDrink(): String
                + performOperation(): String
            }

            class Waiter {
                + Waiter()
                + Waiter(id: String, name: String)
                + serveTable(table: Table): String
                + performOperation(): String
            }

            Person <|-- Customer
            Person <|-- Employee
            Employee <|-- Cashier
            Employee <|-- Chef
            Employee <|-- Barista
            Employee <|-- Waiter
        }

        package "inventory" {
            enum ProductCategory {
                HOT_BEVERAGE
                COLD_BEVERAGE
                DESSERT
                SNACK
            }

            class Product {
                - productId: String
                - name: String
                - price: BigDecimal
                - category: ProductCategory
                - recipe: List<ProductIngredient>
                + Product()
                + getPrice(): BigDecimal
                + getRequiredIngredients(): Map<Ingredient, BigDecimal>
            }

            class ProductIngredient {
                - quantityNeeded: BigDecimal
                - ingredient: Ingredient
                + ProductIngredient()
            }

            class Inventory {
                - ingredients: List<Ingredient>
                - lastReviewDate: LocalDate
                + Inventory()
            }

            class Ingredient {
                - ingredientId: String
                - name: String
                - stockQuantity: BigDecimal
                - unit: String
                + Ingredient()
                + reduceStock(amount: BigDecimal): void
                + updateStock(amount: BigDecimal): void
            }

            Product "1" *-- "*" ProductIngredient : requires >
            ProductIngredient "*" o-- "1" Ingredient : maps to >
            Inventory "1" o-- "*" Ingredient : tracks >
        }

        package "floor" {
            class Machine {
                - id: String
                - brand: String
                - state: boolean
                + Machine()
                + turnOn(): void
                + operate(): void
                + turnOff(): void
            }

            class Table {
                - id: String
                - state: boolean
                - assignedWaiter: Waiter
                + Table()
                + occupy(): void
                + free(): void
            }
            
            Table "*" o-- "0..1" Waiter : assigned to >
        }

        package "payment" {
            abstract class Payment {
                - amount: BigDecimal
                - type: String
                + Payment()
                + Payment(amount: BigDecimal, type: String)
                + {abstract} processPayment(processor: PaymentProcessor): boolean
                + getType(): String
            }

            interface PaymentProcessor {
                + processCash(cash: Cash): boolean
                + processCreditCard(creditCard: CreditCard): boolean
                + processTransfer(transfer: Transfer): boolean
            }

            class Transfer {
                - accountNumber: String
                + Transfer()
                + Transfer(amount: BigDecimal, accountNumber: String)
                + processPayment(processor: PaymentProcessor): boolean
            }

            class CreditCard {
                - paymentToken: String
                + CreditCard()
                + CreditCard(amount: BigDecimal, paymentToken: String)
                + processPayment(processor: PaymentProcessor): boolean
            }

            class Cash {
                - amountTendered: BigDecimal
                + Cash()
                + Cash(amount: BigDecimal, amountTendered: BigDecimal)
                + processPayment(processor: PaymentProcessor): boolean
            }

            Payment <|-- Transfer
            Payment <|-- CreditCard
            Payment <|-- Cash
            Payment ..> PaymentProcessor : double dispatch >
        }

        package "order" {
            enum OrderStatus {
                PENDING
                PREPARING
                READY
                SERVED
                PAID
            }

            class Order {
                - orderId: String
                - dateTime: LocalDateTime
                - status: OrderStatus
                - items: List<OrderItem>
                - customer: Customer
                - payment: Payment
                - taxRate: BigDecimal
                - discount: BigDecimal
                - isSynced: boolean
                + Order()
                + addItem(item: OrderItem): void
                + calculateSubtotal(): BigDecimal
                + calculateTax(): BigDecimal
                + calculateTotal(): BigDecimal
                + updateStatus(status: OrderStatus): void
            }

            class OrderItem {
                - orderItemId: String
                - quantity: int
                - product: Product
                - modifiers: List<String>
                + OrderItem()
                + calculateSubtotal(): BigDecimal
                + addModifier(modifier: String): void
            }

            Order "1" *-- "*" OrderItem : contains >
            Order "0..1" o-- "1" Customer : placed by >
            Order "1" *-- "0..1" Payment : paid via >
            OrderItem "*" o-- "1" Product : references >
        }

        package "management" {
            class OrderManager {
                - orders: List<Order>
                - orderRepository: IRepository<Order>
                + createOrder(customer: Customer): Order
                + processPayment(order: Order, payment: Payment): boolean
                + loadData(): void
                + saveData(): void
            }

            class HRManager {
                - employees: List<Employee>
                - employeeRepository: IRepository<Employee>
                + addEmployee(employee: Employee): void
                + removeEmployee(id: String): void
                + assignShift(id: String, shift: String): void
                + loadData(): void
                + saveData(): void
            }

            class FloorManager {
                - tables: List<Table>
                - machines: List<Machine>
                - floorRepository: ISingleRepository<FloorManager>
                + addTable(table: Table): void
                + removeTable(id: String): void
                + addMachine(machine: Machine): void
                + removeMachine(id: String): void
                + assignTable(tableId: String, waiter: Waiter): void
                + toggleTableState(id: String): void
                + toggleMachineState(id: String): void
                + loadData(): void
                + saveData(): void
            }

            class InventoryManager {
                - inventory: Inventory
                - inventoryRepository: ISingleRepository<Inventory>
                + addIngredient(ingredient: Ingredient): void
                + updateIngredientStock(id: String, actualQuantity: BigDecimal): void
                + removeIngredient(id: String): void
                + checkStockFor(requiredIngredients: Map<Ingredient, BigDecimal>): boolean
                + deductStockFor(requiredIngredients: Map<Ingredient, BigDecimal>): void
                + loadData(): void
                + saveData(): void
            }

            class CatalogManager {
                - products: List<Product>
                - productRepository: IRepository<Product>
                + addProduct(p: Product): void
                + removeProduct(id: String): void
                + updateProductPrice(id: String, newPrice: BigDecimal): void
                + updateProductRecipe(id: String, newRecipe: List<ProductIngredient>): void
                + loadData(): void
                + saveData(): void
            }

            class FinanceManager {
                - dataFilePath: String
                + generateZReport(date: LocalDate, orders: List<Order>): Map<String, BigDecimal>
                + loadData(): void
                + saveData(): void
            }
            
            class CoffeeShop {
                - name: String
            }

            CoffeeShop "1" *-- "1" OrderManager
            CoffeeShop "1" *-- "1" HRManager
            CoffeeShop "1" *-- "1" FloorManager
            CoffeeShop "1" *-- "1" InventoryManager
            CoffeeShop "1" *-- "1" CatalogManager
            CoffeeShop "1" *-- "1" FinanceManager

            OrderManager "1" o-- "*" Order : manages >
            HRManager "1" o-- "*" Employee : manages >
            FloorManager "1" o-- "*" Table : manages >
            FloorManager "1" o-- "*" Machine : manages >
            InventoryManager "1" o-- "1" Inventory : manages >
            CatalogManager "1" o-- "*" Product : manages >
            
            OrderManager ..> IRepository : depends on >
            HRManager ..> IRepository : depends on >
            FloorManager ..> ISingleRepository : depends on >
            InventoryManager ..> ISingleRepository : depends on >
            CatalogManager ..> IRepository : depends on >
        }
    }

    package "view" {
        class MainView {
            + start(): void
            - posModule(): void
            - kitchenModule(): void
            - catalogModule(): void
            - inventoryModule(): void
            - hrModule(): void
            - floorModule(): void
            - financeModule(): void
        }
    }

    ' Relaciones del patrón MVC
    MainView ..> CoffeeShop : interacts with >

}
@enduml